--- a/RAVESLI_TASKS.vcxproj.filters
+++ b/RAVESLI_TASKS.vcxproj.filters
@@ -59,5 +59,20 @@
     <ClCompile Include="PART_15.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PART_16.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PART_17.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PART_18.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PART_20.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PART_21.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
